fixed footer spacing

--- a/src/pages/styles/pages.scss
+++ b/src/pages/styles/pages.scss
@@ -1,8 +1,8 @@
 .home {
-    display: flex;
+    // display: flex;
     // grid-template-columns: 25% 75%;
     // margin: auto;
-    align-items: stretch;
+    // align-items: stretch;
 
      @media (max-width: 60em) {
         flex-direction: column;
